--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "nuxt": "^3.2.2"
   },
   "dependencies": {
-    "firebase": "^9.17.1"
+    "firebase": "^9.17.1",
+    "sass": "^1.58.3",
+    "sass-loader": "^10.4.1"
   }
 }
